--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.97.0",
+    "bcryptjs": "^3.0.3",
+    "jose": "^6.1.3",
+    "mongoose": "^9.2.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
