--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "jose": "^6.1.3",
     "mongoose": "^9.2.2",
     "next": "16.1.6",
